VGLEditor/editor/parser/vgl_grammer.jjt
 /**
 * JJTree template file created by SF JavaCC plugin 1.5.17+ wizard for JavaCC 1.5.0+
 */
options
{
  MULTI = true;
  STATIC = false;
  IGNORE_CASE = true;
  COMMON_TOKEN_ACTION = true; //calls commonTokenAction after creating token
  TOKEN_MANAGER_USES_PARSER = true;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  TRACK_TOKENS = true; //sets first and last token of the node
  NODE_USES_PARSER = true;
  NODE_SCOPE_HOOK = true;
  BUILD_NODE_FILES = true;
}

PARSER_BEGIN(VGLParser)
package editor.parser;

public class VGLParser extends VGLParserBase
{}

PARSER_END(VGLParser)

//  =================================================================
//  Define the token manager.
//  =================================================================
TOKEN_MGR_DECLS :
{
  void CommonTokenAction(Token t)
  {
  }
}

SKIP :
{
  " "
| "\t"
  //| "\n"
  //| "\r"
| < "//" (~[ "\n", "\r" ])*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < "/*" (~[ "*" ])* "*"
    (
      ~[ "/" ] (~[ "*" ])* "*"
    )*
    "/" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL : < DECIMAL_LITERAL > >
| < #DECIMAL_LITERAL : [ "1"-"9" ] ([ "0"-"9" ])* >
| < #HEX_LITERAL : "0" [ "x", "X" ] ([ "0"-"9", "a"-"f", "A"-"F" ])+ >
| < #OCTAL_LITERAL : "0" ([ "0"-"7" ])* >
}

TOKEN : /* Commands */
//This declaration must be before identifier, else thse tokens will
//be recognized as identifiers
{
  < CANVAS : "CANVAS" >
| < POINT : "POINT" >
| < LINE : "LINE" >
| < CIRCLE : "CIRCLE" >
| < BUTTON : "BUTTON" >
| < ROTATE : "ROTATE" >
| < MESSAGE : "MESSAGE" >
| < FUNCTION : "FUNCTION" >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER :
    < LETTER >
    (
      < LETTER >
    | < DIGIT >
    )* >
| < STR_LITERAL : 
    "\"" 
    ~[ "\n", "\r" ] 
    "\"" 
    >
| < #LETTER : [ "_", "a"-"z", "A"-"Z" ] >
| < #DIGIT : [ "0"-"9" ] >
}

TOKEN :
{
  < EOL :
    "\r\n"
  | "\r"
  | "\n" >
}

SimpleNode Start() :
{}
{
  (
    CommandStatement()
  | 
    FunctionDef()
  )*
  < EOF >
  {
    return jjtThis;
  }
}

void CommandStatement() #void :
{}
{
  Command()
  (
    (
      < EOL >
    )+
  | 
    < EOF >
  )
}

void Command() #void :
{}
{
  Canvas()
| Point()
| Line()
| Circle()
| FunctionCall()
}

void Point() :
{}
{
  < POINT > < INTEGER_LITERAL > < INTEGER_LITERAL > Identifier()
}

void Canvas() :
{}
{
  < CANVAS > < INTEGER_LITERAL > < INTEGER_LITERAL >
}

void Circle() :
{}
{
  < CIRCLE > Numeric() Identifier()
}

void Line() :
{}
{
  < LINE >
  (
    LOOKAHEAD(3)
    (
      Identifier() Identifier() Identifier()
    )
  |
    (
      Identifier() Identifier()
    )
  )
}

void Button() :
{}
{
  < BUTTON > 
  < INTEGER_LITERAL > < INTEGER_LITERAL > < STR_LITERAL > Identifier()
}

void FunctionCall() :
{}
{
  Identifier() "()"
}

void FunctionDef() :
{}
{
  < FUNCTION > Identifier()
  (
    < EOL >
  )+
  "{"
  (
    < EOL >
  )+
  (
    Command()
    (
      < EOL >
    )+
  )*
  "}"
  (
    < EOL >
  )*
}

void Identifier() :
{}
{
  < IDENTIFIER >
}

void FloatNumeric() #void :
{}
{
  [ < INTEGER_LITERAL > ] "." < INTEGER_LITERAL >
}

void Numeric() #void :
{}
{
  LOOKAHEAD(2)
  < INTEGER_LITERAL >
| 
  FloatNumeric()
}
